src/parse/snapshots/protox__parse__tests__parse_extension-7.snap
---
source: src/parse/tests.rs
expression: "match parser.parse_extend() {\n    Ok(value) => Ok(value),\n    Err(()) => Err(parser.lexer.extras.errors),\n}"
---
Err(
    [
        UnexpectedToken {
            expected: "a type name",
            found: RightBracket,
            span: 7..8,
        },
    ],
)
