src/parse/snapshots/protox__parse__tests__parse_field-13.snap
---
source: src/parse/tests.rs
expression: "if parser.lexer.extras.errors.is_empty() {\n        Ok(result.unwrap())\n    } else { Err(parser.lexer.extras.errors) }"
---
Err(
    [
        UnexpectedToken {
            expected: "';' or '['",
            found: Service,
            span: 25..32,
        },
    ],
)
