src/parse/snapshots/protox__parse__tests__parse_field-14.snap
---
source: src/parse/tests.rs
expression: "match parser.parse_field() {\n    Ok(value) => Ok(value),\n    Err(()) => Err(parser.lexer.extras.errors),\n}"
---
Err(
    [
        UnexpectedToken {
            expected: "'.' or ','",
            found: Semicolon,
            span: 7..8,
        },
    ],
)
